--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -2,3 +2,8 @@ theme: osuny-hugo-theme-aaa
 paginate: 18
 enableRobotsTXT: true
 removePathAccents: true
+params:
+  summary:
+    position: hero
+  breadcrumb: 
+    position: after-hero
